--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,3 @@
-
 .leaflet-container {
     height: 100%;
   }
@@ -8,4 +7,54 @@
   width: 20px !important;
   height: 20px !important;
   line-height: 20px !important;
+}
+
+.tooltip {
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: normal;
+}
+.tooltip ul {
+  list-style-type: none;
+}
+
+.boldText {
+  font-weight: bold;
+}
+
+.legendContainer {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  padding: 6px 8px;
+  font: 14px/16px Roboto;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  line-height: 18px;
+  color: #555;
+}
+.legendContainer div {
+  display: flex;
+  align-items: center;
+}
+.legendContainer img {
+  margin-left: 3px;
+  height: 15px;
+}
+
+.legend {
+  margin-top: 10px;
+  color: #555;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+.infoIcon:hover {
+  cursor: help;
 }
